major overhaul of StoreProduct, what a garbage that was!